# BingSift

./: .gitignore  README.md  pyproject.toml
bingsift/: __init__.py  cli.py  filters.py  net.py  parser.py
