[project]
name = "bingsift"
version = "0.2.0"
description = "Sift Bing SERP HTML into clean JSON/CSV, build filtered search URLs, and extract Bing click redirect targets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="TabNahida"}]
license = {text = "MIT"}
dependencies = ["beautifulsoup4", "pandas"]

[project.scripts]
bingsift = "bingsift.cli:main"
