[project]
name = "bingsift"
version = "0.3.2"
description = "Sift Bing SERP HTML into clean JSON/CSV, build filtered search URLs, extract Bing click targets, and optionally fetch over the network."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="TabNahida"}]
license = {text = "MIT"}
dependencies = ["beautifulsoup4", "pandas", "aiohttp"]

[project.scripts]
bingsift = "bingsift.cli:main"
